# GlassBox-Rust-SVD-recommendation-system

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  build_log.txt  cargo_check_output.txt  cargo_check_wasm_output.txt  cargo_warnings.txt  check_log.txt  check_log_utf8.txt  compile_log.txt  compile_log_2.txt  compile_log_feed.txt  compile_log_feed_2.txt  compile_log_feed_3.txt  compile_log_surreal.txt  compile_log_surreal_2.txt  compile_log_surreal_3.txt  compile_log_surreal_4.txt  compile_log_surreal_5.txt  context.txt  error.txt  index.html  nginx.conf
assets/: home.css  login.css  maincard.css  movie_modal.css  navbar.css  navbar.js  search.js  search_results.css  signup.css  signup.js
src/: main.rs
src/api/: mod.rs  search.rs  youtube.rs
src/cards/: main_card.rs  mod.rs  search_results.rs
src/components/: feed.rs  mod.rs  movie_modal.rs  search.rs
src/model/: db.rs  feed_control.rs  history.rs  mod.rs  session.rs  svd.rs  users.rs  video.rs
src/navbar/: navbar.rs
src/pages/: home.rs  login.rs  mod.rs  signup.rs
